--- a/css/creative.css
+++ b/css/creative.css
@@ -52,8 +52,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #CC99FF;
-
+    background-color: #9999FF;
 }
 
 .bg-dark {
@@ -106,7 +105,7 @@ aside {
     color: #222;
 }
 
-.navbar-default .nav > li>a:hover,
+.navbar-default .nav>li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
     color: #f05f40;
 }
@@ -179,7 +178,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #000000;
-    background-image: url(https://crumpetcottage.files.wordpress.com/2011/08/img_4942.jpg);
+    background-color: #020202;
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -275,6 +274,7 @@ header .header-content .header-content-inner p {
     position: relative;
     margin: 0 auto;
     max-width: 650px;
+    background-color: #333333;
 }
 
 .portfolio-box .portfolio-box-caption {
@@ -399,7 +399,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary {
     border-color: #f05f40;
     color: #fff;
-    background-color: #000;
+    background-color: #ff0000;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -483,10 +483,47 @@ img::-moz-selection {
     background: 0 0;
 }
 
+.carousel,
+.item,
+.active {
+    height: 100%;
+}
+
+.carousel-inner {
+    height: 100%;
+}
+
+/* Background images are set within the HTML using inline CSS, not here */
+
+.fill {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+
 body {
     webkit-tap-highlight-color: #222;
 }
 
 .remove-space {
     padding: 10px 15px;
+}
+
+.add-left-margin {
+    margin-left: 15%;
+}
+
+.add-top-margin {
+    margin-top: 5%;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC:700);
+
+.widget {
+    width: 80%;
 }
