--- a/css/creative.css
+++ b/css/creative.css
@@ -148,7 +148,7 @@ aside {
 
     .navbar-default.affix {
         border-color: rgba(34,34,34,.05);
-        background-color: #fff;
+        background-color: #CCCCCC;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand {
