--- a/quiz.css
+++ b/quiz.css
@@ -2,16 +2,16 @@
 height:			300px;
 width:			300px;
 display: 		inline-block;
-
-padding: 		30px;
+font-weight: 	bold;
 
 font-size:		2em;
-text-align:		center;         
+text-align:		center;    
+
+opacity:		0.3;     
 }
 
 #zeroth {
 	background-color:	#00FFCC;
-	onclick:			myFunction(zeroth);
 }
 
 #one {
