--- a/css/separators.css
+++ b/css/separators.css
@@ -521,12 +521,12 @@ section {
     position: relative;
     padding: 10em 10%;
     background: #fff;
-    color: #740404;
+    color: #000;
     text-align: center;
 }
 
 section h2 {
-        color: #740404;
+        color: #000;
     margin: 0;
     padding: 0;
     font-size: 2.8em;
@@ -534,7 +534,7 @@ section h2 {
 }
 
 section p {
-    color: #740404;
+    color: #000;
     font-size: 1.3em;
     line-height: 1.5;
         text-align: justify;
@@ -689,9 +689,9 @@ svg#bigTriangleColor {
 /* Curves */
 #curveUpColor path,
 #curveDownColor path {
-    fill: #000;
-    stroke: #000;
-        background-color: #8C001A;
+    fill: #fff;
+    stroke: #fff;
+        background-color: #fff;
 }
 
 /* Multiple Triangles */
@@ -882,20 +882,20 @@ svg#bigTriangleColor {
 
 /* Big half circle */
 #bigHalfCircle path {
-    fill: #000;
-    stroke: #000;
+    fill: #72587F;
+    stroke: #72587F;
 }
 
 /* Big triangle with shadow */
 
 #trianglePath1 {
-    fill: #000;
-    stroke: #000;
+    fill:#72587F;
+    stroke:#72587F;
 } 
 
 #trianglePath2 {
-    fill: #777;
-    stroke: #777;
+    fill: #BDA0CB;
+    stroke: #BDA0CB;
 }
 
 /* Inclined Zig Zag */
